2011-11-16  Murray Cumming  <murrayc@murrayc.com>

	List view: Stop unnecessary saving of column widths.

	* glom/mode_data/db_adddel/db_adddel.[h|cc]: Do not handle changes 
	of the GtkTreeView column width, because it happens during normal
	size allocation as well as when the user resizes columns.
	It is not essential anyway.

2011-11-16  Murray Cumming  <murrayc@murrayc.com>

	Make the Calendar portal work again.

	* glom/mode_data/box_data_calendar_related.[h|cc]: Override
	create_layout() as a place to call our get_fields_to_show(), like
	Box_Data_List_Related does. Then fill_from_database() can succeed.
	Bug #663310

2011-11-14  Murray Cumming  <murrayc@murrayc.com>

	Fake connection test: Test for a substring in the generated query.

	* tests/test_fake_connection.cc: This also fixes the build with
	-Werror.

2011-11-13  Murray Cumming  <murrayc@murrayc.com>

	Use the new Gnome::Gda::Numeric API.

	* glom/libglom/data_structure/glomconversions.cc:
	* glom/libglom/python_embed/pygdavalue_conversions.cc:
	* tests/python/test_python_execute_func_date.cc: GdaNumeric now has 
	a real API so we can make our code simpler.

2011-11-11  Murray Cumming  <murrayc@murrayc.com>

	List view and Related Records: Disable buttons when appropriate.

	* glom/mode_data/db_adddel/db_adddel.[h|cc]: Handle the 
	Gtk::TreeView::Selection::signal_changed() signal and call a 
	new virtual on_selection_changed() method.
	* glom/mode_data/db_adddel/db_adddel_withbuttons.[h|cc]:
	Disable the Edit/Open and Delete buttons when there is no selection.
	Bug #663812 (André Klapper)

2011-11-10  Murray Cumming  <murrayc@murrayc.com>

	Correct an error in the previous commit.

	* glom/libglom/connectionpool.cc: Remove a nonsense line of code that
	stopped connections from working.

2011-11-10  Murray Cumming  <murrayc@murrayc.com>

	Added ConnectionPool::set_fake_connection().

	* glom/libglom/connectionpool_backends/backend.h: connect():